--- a/beast_scheme/beast.htm
+++ b/beast_scheme/beast.htm
@@ -28,13 +28,13 @@
 <li>Пакет <a href="package/psychic.htm"> psychic</a> - автоматизмы, Правила, Значимости, циклы осмысления.</li>
 <br>
 На самом деле пакет psychic имеет множество подразделов, которые объеденены в один пакет только из-за огромных неудобств, создаваемых в языке golang отсутствием защиты от цикличности испорта типа Include Once (какой есть практически у всех нормальных языков).<br>
-Поэтому условно разделим этит пакет на:<br>
+Поэтому условно разделим этот пакет на:<br>
 <li><a href="package/actions_image.htm">actions_image</a> - совокупные образы действий.</li>
 <li><a href="package/actions_images_mental.htm">actions_images_mental</a> - совокупные образы ментальных действий.</li>
 <li><a href="package/automatism_tree.htm">automatism_tree</a> - дерево автоматизмов.</li>
 <li><a href="package/automatizm.htm">automatizm</a> - автоматизмы.</li>
 <li><a href="package/base_state_image.htm">base_state_image</a> - Образ текущего состояния.</li>
-<li><a href="package/cerebellum.htm">cerebellum</a> - рефлексы мохжечка.</li>
+<li><a href="package/cerebellum.htm">cerebellum</a> - рефлексы мозжечка.</li>
 <li><a href="package/dominanta.htm">dominanta</a> - доминанта нерешенной проблемы.</li>
 <li><a href="package/emotions.htm">emotions</a> - эмоциональные контексты.</li>
 <li><a href="package/episodic_memory.htm">episodic_memory</a> - эпизодическая память.</li>
