--- a/beast_scheme/package/action_sensor.htm
+++ b/beast_scheme/package/action_sensor.htm
@@ -11,8 +11,9 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Детектор действий с Пульта</h1>
 </div>
 
-Beast  
-  
+ Ощущение действий с Пульта. Могут быть совершены сразу несколько действий.
+Так что возникает образ действий (а далее - и общий образ действий и фраз).<br>
+  <br>
 <li><a href="../funcs/SetActionFromPult.htm">SetActionFromPult</a> - акция с пульта</li>
 <li><a href="../funcs/CheckCurActions.htm">CheckCurActions</a> - Детектор акций с Пульта</li>
 <li><a href="../funcs/CheckCurActionsContext.htm">CheckCurActionsContext</a> - Сохраняемый контекст ранее воздействующих акций</li>
