--- a/beast_scheme/package/actions_image.htm
+++ b/beast_scheme/package/actions_image.htm
@@ -11,7 +11,12 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Совокупные образы действий</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Образы действий, оператора или действий Beast.<br>
+Фактически структура повторяет ActionsImage из рефлексов и позволяет сохранять
+как образы действий в автоматизмах, так и образы действий оператора, отражаемые в дереве мот.автомтаизмов.<br>
+Используется для формирования пар стимул (действия оператора) - действия (ответ beast) 
+для эпизодической памяти и структуры rules - Правил примитивного опыта.<br>
+<br>  
+<li><a href="../funcs/CreateNewlastActionsImageID.htm">CreateNewlastActionsImageID</a> - создать новое сочетание совокупного образа действий (оператора или Beast) если такого еще нет</li>
+<li><a href="../funcs/SaveActionsImageArr.htm">SaveActionsImageArr</a> - сохранить образы сочетаний ответных действий</li>
+<li><a href="../funcs/loadActionsImageArr.htm">loadActionsImageArr</a> - загрузить образы сочетаний ответных действий</li>
