--- a/beast_scheme/package/automatism_tree.htm
+++ b/beast_scheme/package/automatism_tree.htm
@@ -11,7 +11,38 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Дерево автоматизмов</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Дерево автоматизмов активируется при:<br>
+1. Всегда при любых событиях с Пульта – так же как дерево рефлексов, но если к ветке привязан автоматизм,
+то он выполняется преимущественно, блокируя рефлексы потому,
+что уже было произвольностью преодолено действие рефлекса при выработке автоматизма.
+Такой автоматизм обладает меткой успешности ==1. Успешность ==0 означает предположительный вариант действий,
+а успешность < 0 – заблокированный вариант действия.<br>
+Так что к ветке может быть прикреплено множество неудачных и предположительных автоматизмов
+и только один удачный. Более удачный результат переводит ранее удачный автоматизм в предполагаемые.
+2. При произвольной активации отдельных условий.<br>
+Отсуствие подходящей для данных условий ветки дерева вызывает
+Ориентировочный рефлекс привлечения внимания к активной ветке с осмыслением ситуации
+и рассмотрением альтернатив действиям (4 уровня глубины рассмотрения).<br>
+При формировании нового предположительного действия создается новая ветка дерева и к ней прикрепляется автоматизм.<br>
+Т.е. новые условия не создают новой ветки, а тольно - новый автоматизм,
+а пока нет автоматизма будет ориентировочный рефлекс.<br>
+<br>
+У дерева фиксированных 6 уровней:<br>
+0 нулевой - основание<br>
+1 Базовое состояние - 3 вида<br>
+2 Эмоция<br>
+3 Активность с Пульта - образ ActivityFromIdArr=make(map[int]*Activity)<br>
+4 Образ контекста сообщения: сочетание Tone и Mood из структуры vrbal<br>
+5 Первый символ фразы<br>
+6 Фраза - VerbalID<br>
+До 6-го уровня - полный аналог условным рефлексам, только вместо сочетаний контекстов - эмоция.<br>
+<br>  
+<li><a href="../funcs/automatizmTreeActivation.htm">automatizmTreeActivation</a> - активация дерева автоматизмов</li>
+<li><a href="../funcs/afterTreeActivation.htm">afterTreeActivation</a> - реакции после активации ветки дерева</li>
+<li><a href="../funcs/createNewAutomatizmNode.htm">createNewAutomatizmNode</a> - Создать новый узел дерева автоматизма, если такого еще нет</li>
+<li><a href="../funcs/loadAutomatizmTree.htm">loadAutomatizmTree</a> - загрузить записанное дерево</li>
+<li><a href="../funcs/SaveAutomatizmTree.htm">SaveAutomatizmTree</a> - сохранить в файле дерево автоматизмов</li>
+<li><a href="../funcs/FindAutomatizmTreeNodeFromCondition.htm">FindAutomatizmTreeNodeFromCondition</a> - найти КОНЕЧНЫЙ узел по условиям</li>
+<li><a href="../funcs/createNewlastActivityID.htm">createNewlastActivityID</a> - создать образ сочетаний пусковых стимулов, если такого еще нет</li>
+<li><a href="../funcs/SaveActivityFromIdArr.htm">SaveActivityFromIdArr</a> - сохранить образы сочетаний пусковых стимулов</li>
+<li><a href="../funcs/loadActivityFromIdArr.htm">loadActivityFromIdArr</a> - загрузить образы сочетаний пусковых стимулов</li>
