--- a/beast_scheme/package/base_state_image.htm
+++ b/beast_scheme/package/base_state_image.htm
@@ -11,7 +11,14 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Образ текущего состояния</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+НЕ ИСПОЛЬЗУЕТСЯ<br>
+Ранее использовалось для записи Правила по изменению состояния, а не ответу оператора, теперь НЕ ИСПОЛЬЗУЕТСЯ в Правилах.<br>
+м.б. все же, будет как-то использоваться.<br>
+<br>
+Образ текущего сосотояния для func understandingSituation
+Возникает только при активации дерева от ActiveFromConditionChange()
+т.е. только если это - не действия оператора Пульта: if !WasOperatorActiveted {<br>
+<br>
+Аналогично образу действий BaseStateImage (оператора или Beast) 
+этот образ участвует в формировании Правил.<br>
+<br>
