--- a/beast_scheme/package/braine.htm
+++ b/beast_scheme/package/braine.htm
@@ -11,7 +11,11 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Мозг Beast</h1>
 </div>
 
- общая инициализация, водитель пульса, сохранение памяти  
+Общая инициализация, водитель пульса, сохранение памяти  
   
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+<br>  
+<li><a href="../funcs/Аctivation.htm">Аctivation</a> - Главный цикл (пульс) опроса состояния Beast и его ответов, активируется в pulsActions() каждый пульс</li>
+<li><a href="../funcs/RunInitialisation.htm">RunInitialisation</a> - самая первая инициализация (из main.go) после всех приготовлений, до запуска пульса в puls.go</li>
+<li><a href="../funcs/Puls.htm">Puls</a> - водитель ритма пульса</li>
+<li><a href="../funcs/pulsActions.htm">pulsActions</a> - действия, совершаемые по каждому пульсу</li>
+<li><a href="../funcs/SaveAll.htm">SaveAll</a> - сохранение всей памяти в файлах</li>
