--- a/beast_scheme/package/dominanta.htm
+++ b/beast_scheme/package/dominanta.htm
@@ -11,7 +11,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Доминанта нерешенной проблемы</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Доминанта нерешенной проблемы (превратная интерпретация - гештальт) это - атрибут 5-й стадии развития - творчества.<br>
+Функциональность еще не отработана.<br>
+<br>  
+<li><a href="../funcs/getMainDominanta.htm">getMainDominanta</a> - аиболее важная доминанта в заданном эмоциональном контексте</li>
