--- a/beast_scheme/package/emotions.htm
+++ b/beast_scheme/package/emotions.htm
@@ -11,7 +11,12 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Эмоциональные контексты</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Эмоциональные контексты - это образы сочетаний базовых контекстов гомеостатической значимости.<br>
+Распознавание активности текущих Базовых контекстов в виде структур 
+- осмысленной значимости сочетаний активных базовых контекстов.
+Произвольно возможна активация имеющегося образа, создание образа новых сочетаний.<br>
+Является важнейшим условным контекстом в психике, определяя смысл (ментально интерпретируюемую значимость) всего остального.<br> 
+<br>  
+<li><a href="../funcs/createNewBaseStyle.htm">createNewBaseStyle</a> - создать новую эмоцию, если такой еще нет</li>
+<li><a href="../funcs/SaveEmotionArr.htm">SaveEmotionArr</a> - сохранить образы сочетаний базовых стилей</li>
+<li><a href="../funcs/loadEmotionArr.htm">loadEmotionArr</a> - загрузить образы сочетаний базовых стилей</li>
