--- a/beast_scheme/package/mood.htm
+++ b/beast_scheme/package/mood.htm
@@ -11,7 +11,19 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Образ ощущаемого настроения</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Настроение бывает: Плохо -10 ... 0 ...+10 Хорошо.<br>
+Ощущение силы Плохо и сил Хорошо и это информационно для оценок последствий действий.
+Настроение возникает в зависимости от гомеостатический параметров
+а так же при оценке опасноного состояния.<br>
+Это безусловно-рефлекторная оценка на освнове изменений
+1) гомео параметров (улавливает их изменение >4%) и 2) основы базовых контекстов: 0- НОРМА, 1-ПЛОХО, 2-ХОРОШО<br>
+Хотя базовые контексты уже создаются на основе жизненных параметров,
+но это - безусловный рефлекс на основе безусловного рефлекса активации базовых контекстов.
+На этой основе происходит конкуренция Целей при их выборе
+и, как следствие, произвольная оценка эмоционального состояния.<br> 
+<br>  
+<li><a href="../funcs/GetCurMood.htm">GetCurMood</a> - Обновляется при инициализации GetCurrentInformationEnvironment() до и после совершения действий</li>
+<li><a href="../funcs/GetAttentionDanger.htm">GetAttentionDanger</a> - оценить опасность текущей ситуации: да-нет</li>
+<li><a href="../funcs/updatePsyMood.htm">updatePsyMood</a> - Постоянное состояние Хорошо довольно быстро уходит, постоянное состояние Плохо уходит гораздо медленнее.</li>
+
+<br><br><br><br>
