--- a/beast_scheme/package/orientation_reflexes.htm
+++ b/beast_scheme/package/orientation_reflexes.htm
@@ -11,7 +11,15 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Ориентировочный рефлекс</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Привлечение осознанного внимания выявляет конечную цель - найти автоматизм или ничего не делать.
+Начинается с Определение Цели в данной ситуации - на уровне наследственных функций
+и активных доминант нерешенной проблемы.<br>
+<br>  
+<li><a href="../funcs/orientation.htm">orientation</a> - Выполнение общего ориентировочного рефлекса из активной ветки Дерева автоматизмов</li>
+<li><a href="../funcs/orientation_1.htm">orientation_1</a> - автоматизма нет, если нужно действовать, то какой-то предположить и сразу проверить</li>
+<li><a href="../funcs/orientation_2.htm">orientation_2</a> - проверить подходит ли автоматизм defAutomatizmID к текущим условиям, если нет, - по опыту того, к чему приводят новые условия - режим нахождения альтернативы</li>
+<li><a href="../funcs/createAutomatizm.htm">createAutomatizm</a> - сформировать пробный автоматизм моторного действия и сразу запустить его в действие</li>
+<li><a href="../funcs/findSuitablePhrase.htm">findSuitablePhrase</a> - подобрать по тону и настроению хоть как-то ассоциирующуюся фразу из имеющихся</li>
+<li><a href="../funcs/getImportantSigns.htm">getImportantSigns</a> - найти важные (по опыту) признаки в новизне - чисто рефлексторный процесс поиска в опыте</li>
+
+<br><br><br><br>
