--- a/beast_scheme/package/rules_mental.htm
+++ b/beast_scheme/package/rules_mental.htm
@@ -11,7 +11,15 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Правила - как эффект от мыслительных действий</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Обобщение ментальных правил на основе ментальных циклов и достижения желаемого (поставленной цели)<br>
+НЕОБХОДИМО чтобы эффективность отражала успешности достижения Цели
+в контексте объекта внимания в результате поиска решения циклами осмысления.<br>
+<br>  
+<li><a href="../funcs/createNewRulesMentalID.htm">createNewRulesMentalID</a> - создать новое ментальное правило, если такого еще нет</li>
+<li><a href="../funcs/SaverulesMentalArr.htm">SaverulesMentalArr</a> - сохранить Образы rulesMental</li>
+<li><a href="../funcs/loadrulesMentalArr.htm">loadrulesMentalArr</a> - загрузить образы rulesMental</li>
+<li><a href="../funcs/getSuitableMentalRules.htm">getSuitableMentalRules</a> - выбрать наилучшее ментальное Правило</li>
+<li><a href="../funcs/getMentalRulesFromEpisodicsSlice.htm">getMentalRulesFromEpisodicsSlice</a> - Найти последнее известное Правило по цепочке последних limit кадров эпиз.памяти</li>
+<li><a href="../funcs/getMentalRulesArrFromTrigger.htm">getMentalRulesArrFromTrigger</a> - быстро выбрать самое лучшее правило по пусковому стимулу, используя шаблоном последнюю цепочку кадров эпизод. памяти</li>
+
+<br><br><br><br>
