--- a/beast_scheme/package/short_term_memory.htm
+++ b/beast_scheme/package/short_term_memory.htm
@@ -11,7 +11,12 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Кратковременная память</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Сохраняет подряд ID базовых ментальных цепочек goNext<br>
+Не сохраняется, но обрабатывается во сне или в спокойствии с выделением новых Правил.
+А так же используется для быстрогого обобщения, ориентации и сознательного поиска.<br>
+
+Быстро растуший массив, ограниченный 1000 элементов<br>
+<br>  
+<li><a href="../funcs/addShortTermMemory.htm">addShortTermMemory</a> - добвить goNext в кратковременную память</li>
+
+<br><br><br><br>
