--- a/beast_scheme/package/sleep.htm
+++ b/beast_scheme/package/sleep.htm
@@ -11,7 +11,16 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Регулировка состояний сна и бодрствования</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Процесс погружения в сон и его стадии и циклы. 
+При накоплении большой оперативной памяти разного рода (которая не сохраняется в файлах памяти) требуется обработка таких массивов и их редуцирование, чтобы они не мешали различным процессам, использующим такую информацию.<br>
+А так же засыпание - при повышении активности "Хочу спать".<br>
+Период сновидений (обработки оставшейся со дня информации) начинается с активации
+CurrentInformationEnvironment - текущего образа информационной среды - выявляются актуальные проблемы
+и активные доминанты нерешенной проблемы.<br> 
+Это становится контекстом развития экспериментирования с оставшимися со дня образами.<br> 
+Механизм преждевременного пробуждения возвращает бодрствование.<br> 
+<br> 
+Это - еще не отрабтанный функционал.
+<br>  
+<li><a href="../funcs/SleepPuls.htm">SleepPuls</a> - синхронизация процесса сна</li>
+<li><a href="../funcs/prepareWordArr.htm">prepareWordArr</a> - обработка накопившегося массива распознанных фраз, бъекты PurposeGeneticObject, объекты внимания высокой значимости и эпизодической памяти</li>
