--- a/beast_scheme/package/trigger_and_action.htm
+++ b/beast_scheme/package/trigger_and_action.htm
@@ -8,10 +8,20 @@
 <body style="margin-left:20px;font-family:arial;font-size:14px;width:1000px;">
 <div style="position:relative;height:20px;margin-bottom:20px;">
 <a href="../index.htm"><img src="../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
-<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Отдельные правила - как эффект от совершенных действий</h1>
+<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'><nobr>Отдельные правила - как эффект от совершенных действий</nobr></h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Образ обощенного (без условия применения) Правила: 
+Cтимул (действий оператора) - ответа Beast - Эффекта<br>
+
+Правило приобретает определнную значимость (смысл) в контексте опредеелнных условий.
+Поэтому нет никакого смысла пытаться использовать обобщенное правило само по себе 
+т.к. одно и то же сочетания Стиму и Ответ может иметь разный эФфект.<br>
+НО если для данного сочетания Стимул-Ответ есть только один вод эффекта, 
+то это - уже Информация, и чем больше опыт (количество обобщенных правил), тем такая информация полезнее.<br>
+<br>  
+<li><a href="../funcs/createNewlastTriggerAndActionID.htm">createNewlastTriggerAndActionID</a> - создать новый образ правила если такого еще нет</li>
+<li><a href="../funcs/SaveTriggerAndActionArr.htm">SaveTriggerAndActionArr</a> - сохранить Образы правил</li>
+<li><a href="../funcs/loadTriggerAndActionArr.htm">loadTriggerAndActionArr</a> - загрузить образы правил</li>
+
+<br><br><br><br>
