--- a/beast_scheme/package/understanding.htm
+++ b/beast_scheme/package/understanding.htm
@@ -8,10 +8,46 @@
 <body style="margin-left:20px;font-family:arial;font-size:14px;width:1000px;">
 <div style="position:relative;height:20px;margin-bottom:20px;">
 <a href="../index.htm"><img src="../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
-<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Понимание, осмысление ситуации: 4 уровня вовлеченности</h1>
+<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Понимание, осмысление ситуации: 4 уровня вовлеченности</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Базовая система самоощущения (актуализация доступной информации),
+функция поддержвания информационной среды в зависимости от текущй ситуации -
+обдщая картина понимания ситуации,
+с функцией лени - думать или не думать: мотивированность думать зависит от ситуации, ее опасности.
+Решение что-делать или просто игнорировать ситуацию - важнейший параметр индивидуальной адаптивности.
+Не просто искать способ выйти из опасного состояния, а искать как улучшить состояние,
+каким бы оно ни было вплоть до полной неудовлетворенности существующим, когда поис ведется в любой ситуации.<br>
+Нужна функция, определяющая лень с индивидуализированными параметрами
+(м.б. зависящими от более базовых индивид.параментров).
+Функция поддерживается системой самоощущения,
+которая работает независимо от активации дерева понимания по каждому пульсу.<br>
+
+Активация func consciousness - после включения или пробуждения - начало цепочки мыслей,
+а так же - по активности дерева (ор.рефлекс) - срабатывает функция делать-неделать.<br>
+
+После объективной активации (activationType==1) начинается рекурсивный субъективный вызов (activationType==2)
+- цикл обдумывания (субъективный ориентировочный рефлекс), каждой шаг которого основывается на информации, даваемой предыдущим шагом
+с целью найти подходящие действия для данной ситуации, что дает возможность снова сориентироваться.<br>
+
+Кроме гомеостатического инфо.окрыжения psi_information_environment.go
+есть psi_information_environment_mental.go куда помещаются результаты информационных функций.
+Использует субъективную часть эпизодов памяти - субъективный тип (для записи эпизодов цепочки мыслей).<br>
+
+Функция consciousness() проходит через 4 уровня решений - выделенных комментариями.
+Если решение не найдено на данном уровне, то отрабатывает следующий уровень сложности обработки (что характеризует эволюционную последовательность их появления).<br>
+
+РАБОТА consciousness() каждого уровня описана по месту. Изолированная от непосредственных воздействий и поэтому самостоятельная система оценки и корректировки состояния,
+происходит с формированием опыта прозвольности выполнения Правил и их выбора для данных условий,
+в частности, Правил относительно самого себя (самосознание).<br>
+<br>  
+<li><a href="../funcs/consciousness.htm">consciousness</a> - Главная, активная с каждым ориентировочным рефлексов функция циклов осмысления
+для поддержания информационной среды и произвольности</li>
+<li><a href="../funcs/refreshCurrentInformationEnvironment.htm">refreshCurrentInformationEnvironment</a> - обновление состояния информационной среды</li>
+<li><a href="../funcs/isIdleness.htm">isIdleness</a> - детекция ленивого состояния</li>
+<li><a href="../funcs/createBasicLink.htm">createBasicLink</a> - создать Базовое звено цепи fromNextID для данной активности деревьев
+и пройти цепочку до конца, чтобы продолжить цикл от него</li>
+<li><a href="../funcs/createNexusFromNextID.htm">createNexusFromNextID</a> - создание ментального автоматизма инфо-функции c ID= infoID</li>
+<li><a href="../funcs/afterWaitingPeriod.htm">afterWaitingPeriod</a> - Учесть последствия ментального запуска мот.автоматизма</li>
+<li><a href="../funcs/getMentalEffect.htm">getMentalEffect</a> - учесть эффект достижения ментальной цели</li>
+<br><br><br><br>
