--- a/beast_scheme/package/understanding_purpose_image.htm
+++ b/beast_scheme/package/understanding_purpose_image.htm
@@ -11,7 +11,12 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Образ желаемой целия</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Образ желаемой цели для Дерева понимания (дерева ментальных автоматизмов).<br>
+Сначала - на основе жизненной цели PurposeGenetic и опасности, но потом может задаваться произвольно
+с переактивацией дерева понимания.<br>
+<br>  
+<li><a href="../funcs/createPurposeImageID.htm">createPurposeImageID</a> - создать новый образ желаемой цели, если такого еще нет</li>
+<li><a href="../funcs/SavePurposeImageFromIdArr.htm">SavePurposeImageFromIdArr</a> - сохранить образы</li>
+<li><a href="../funcs/loadPurposeImageFromIdArr.htm">loadPurposeImageFromIdArr</a> - загрузить образы</li>
+
+<br><br><br><br>
