--- a/beast_scheme/package/understanding_situation_image.htm
+++ b/beast_scheme/package/understanding_situation_image.htm
@@ -11,7 +11,14 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Образ текущей ситуации</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Образ текущей ситуации для осмысления или Образ Модели Понимания - 
+4- уровень Дерева Понимания (или дерева ментальных автоматизмов)
+Здесь активная ID дерева автоматизмов (доступны моторные автоматизмы от дерева автоматизмов)<br>
+<br>  
+<li><a href="../funcs/createSituationImage.htm">createSituationImage</a> - создать образ ситуации, если такого еще нет</li>
+<li><a href="../funcs/SaveSituationImage.htm">SaveSituationImage</a> - сохранить образ</li>
+<li><a href="../funcs/loadSituationImage.htm">loadSituationImage</a> - загрузить образ</li>
+<li><a href="../funcs/getPrioritetOfPultButtonActions.htm">getPrioritetOfPultButtonActions</a> - ПРИОРИТЕТЫ СИТУАЦИЙ</li>
+<li><a href="../funcs/getCurSituationImageID.htm">getCurSituationImageID</a> - определить ID ситуации: настроение при посылке сообщения, нажатые кнопки и т.п.</li>
+
+<br><br><br><br>
