--- a/beast_scheme/package/verbal_Broca_img.htm
+++ b/beast_scheme/package/verbal_Broca_img.htm
@@ -11,7 +11,22 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Словестные образы (область Брока)</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Словестные образы (область Брока)  для 4, 5 и 6-го уровня дерева автоматизмов.<br> 
+Смысл (осознанную значимость) образ приобретеает только в контексте Дерева Понимания (дерева мент.автоматизмов).<br> 
+<br> 
+Детекторы зоны Вернике распознают слова и словосочетания, 
+а область Брока отвечает за смысл распознанных слов и словосочетений,
+за конструирование собственных словосочетаний,
+за моторное использование слов и словосочетаний.<br> 
+За все ответственная структура - образ осмысленных слов и сочетаний.<br> 
+<br> 
+! Нужно иметь в виду, что в Vernike_detector.go есть массив памяти фраз, накапливается в течении дня
+var MemoryDetectedArr []MemoryDetected - структур фразы с контекстным окружением
+и Verbal.PhraseID[] - можно найти в этом массиве для ориентировки что бы ло раньше и позже.<br> 
+MemoryDetectedArr - как бы оперативная память фраз для сопоставлений.<br>
+<br>  
+<li><a href="../funcs/createNewlastVerbalID.htm">createNewlastVerbalID</a> - создать новый вербальный образ, если такого еще нет</li>
+<li><a href="../funcs/SaveVerbalFromIdArr.htm">SaveVerbalFromIdArr</a> - сохранить вербальные образы</li>
+<li><a href="../funcs/loadVerbalFromIdArr.htm">loadVerbalFromIdArr</a> - загрузить вербальные образы</li>
+
+<br><br><br><br>
