--- a/beast_scheme/index.htm
+++ b/beast_scheme/index.htm
@@ -23,6 +23,24 @@
 Пульт используется для формирования и воспитания адаптивных навыков Beast путем общения с заданием позитивных или негативных стимулов.<br>
 Пульт обеспечивает индикацию состояния Beast и отдельных функций.<br>
 На Пульте есть инструменты работы с Памятью Beast и подскзка "Как использовать Пульт".<br>
+<br>
+Схема Beast написана на языке golang (хотя лучшим языком является rust, пока не имеющей удобный IDE от JetBrains). В ходе разработки пришлось отказаться от многопоточности golang из-за досадной недоделки: паники “одновременного чтения и записи в карту”, чего нет в нормальных языках. <br>Декларировалось, что golang был создан как ученический язык с жесткими наставническими правилами, которые здорово раздражают, но с которыми можно мириться, но такие недоделки как паника при работе с картами и отсутствие возможности повторного включения пакетов очень сильно ограничивают возможности. Так что вместо многопоточности пришлось ввести искусственную многопоточность в виде тактов “пульса” частотой в 1 сек (чтобы почти всегда успевали выполняться даже тяжелые функции). Так что в схеме все работает последовательно, но в целом возникает одновременность выполнения различных функций.<br>
+Итак, активность всего функционала Beast синхронизирована Пульсом и от него начинается. В момент включения Beast с Пульта этим же Пульсом синхронизируется и работа Пульта.<br>
+Особенность функционала – последовательное выполнение сначала более эволюционно древних наработок (как и в мозге), а более используют данные от предыдущих (предыдущие становятся сенсорами последующих), но своей активностью, если она есть, последующие подавляют предыдущие. Так, самыми древними является система равновесия жизненных параметров (гомеостаз) и первичные сенсоры, распознающие активность с Пульта в виде образов восприятия.<br> 
+Далее идут безусловные, за ними – условные рефлексы.<br> 
+В случае новой сенсорики срабатывает “ориентировочный рефлекс”. Начинают формироваться зеркальные автоматизмы (перенимающие авторитарные действия с Пульта – как свое в данных условиях), а также автоматизмы пробных действий.<br>
+Затем формируются образы более сложных состояний, образы “правил” и “значимостей” объектов внимания с возможностью подвергнуть сомнению и заменить (если нужно) базовые автоматизмы.
+Далее формируется система ментальных (для целей внутреннего управления, а не выдачи действий на Пульт) действий и образов.<br>
+С обилием возникающих данных как результатов функций предшествующих структур, возникает возможность очень разнообразной обработки такой информации с пользой не только для гомеостаза, но поставленных ментально целей.<br>
+Схема Beast, таким образом, - это очень сложная в понимании система, требующая предварительного глубокого вникания в модель индивидуальной адаптивности. В случае хорошего понимания сути иерархии адаптивных механизмов, код вполне легко читается потому как минимально использует конструкции языка golang (не использованы даже базы данных), не требуя быть в нем матерым специалистом.<br>
+<br>
+В схеме везде используется понятие “образ”, соответствующий профилю активности персептронных структур распознающего нейрона. Активность нейрона означает, что на его входы подано то сочетание активностей, на распознавание которого он настроен, т.е. активность одного нейрона символизирует активности многих предшествующих структур и заменяется всего одним сигналом, который в схеме обозначается уникальным идентификатором (ID) в виде числа. Образы позволяют оперировать массивами любой сложности, условно закодированными в единственным ID. Как следствие такой организации, становится возможным использовать фиксированное число слоев распознавания (в новой коре человека 6 фиксированных слоев).<br>
+<br>
+<br>
+<br>
+
+
+
 
 
 
