--- a/beast_scheme/package/TerminalActions.htm
+++ b/beast_scheme/package/TerminalActions.htm
@@ -11,7 +11,17 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Выполнение действий, список возможных акций Beast</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Генетические цели действий Beast ID гомео-параметров, которые призвано улучшить данное действие - по его ID<br>
+Значение 10 означает - для всех параметров - улучшение.<br>
+
+Это – наследственно заданная цель действия, не осознаваемая при его совершении.<br>
+Но с опытом каждому действию в конкретных условиях (и к ним добавляются слова и фразы)
+будет ассоциироваться смысл (осознаваемая значимость).<br>
+<br>  
+<li><a href="../funcs/TermineteActionCountPuls.htm">TermineteActionCountPuls</a> - коррекция текущего состояния гомеостаза и базового контекста с каждым пульсом по результату действия</li>
+<li><a href="../funcs/loadTerminalActons.htm">loadTerminalActons</a> - загрузить образы действий из файла</li>
+<li><a href="../funcs/SaveTerminalActons.htm">SaveTerminalActons</a> - Сохранить массив действий в файл</li>
+<li><a href="../funcs/UpdateActionsTargetsFromID.htm">UpdateActionsTargetsFromID</a> - Обновить список БП, которые улучшаются при действии</li>
+<li><a href="../funcs/UpdateTerminalActionsExpenses.htm">UpdateTerminalActionsExpenses</a> - Обновить массив затратных действий</li>
+<li><a href="../funcs/ChooseSimpleReflexexAction.htm">ChooseSimpleReflexexAction</a> - выбрать подходящий простейший рефлекс и вернуть его действие</li>
+<li><a href="../funcs/GetSimpleActionForCurContitions.htm">GetSimpleActionForCurContitions</a> - ыдать массив возможных действий по ID парамктров гомеостаза как цели для улучшения в данных условиях</li>
