--- a/beast_scheme/package/episodic_memory.htm
+++ b/beast_scheme/package/episodic_memory.htm
@@ -11,7 +11,16 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Эпизодическая память</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Эпизодическая память последовательности Правил (Стимул-Ответ-Эффект) прежнего опыта реагирования.<br>
+Фактически представляет собой дерево решений,
+в котором каждое последующее решение тематически зависит от имеющихся цепочек последовательностей.<br>
+
+Поиск решений реализуется функцией getRulesFromEpisodicsSlice для только что пройденной последовательности Правил.<br>
+Линейная, не ветвящаяся  цепочка.<br>
+Запоминается в файле episod_memory.txt для каждого ор.рефлекса (до обработки с редуцированием operMemory)
+т.е. это - самая многочисленная часть памяти, поэтому оптимизируется, редуцируясь во сне (в psychic_sleep_process.go).<br>
+<br>  
+<li><a href="../funcs/newEpisodeMemory.htm">newEpisodeMemory</a> - добавить НОВЫЙ ЭПИЗОД ПАМЯТИ</li>
+<li><a href="../funcs/saveEpisodicMenory.htm">saveEpisodicMenory</a> - запись эпизодической памяти</li>
+<li><a href="../funcs/loadEpisodicMenory.htm">loadEpisodicMenory</a> - загрузка эпизодической памяти</li>
+<li><a href="../funcs/getLastRulesSequenceFromEpisodeMemory.htm">getLastRulesSequenceFromEpisodeMemory</a> - Вытащить из эпизод.памяти посленюю цепочку кадров</li>
