--- a/beast_scheme/package/psychic.htm
+++ b/beast_scheme/package/psychic.htm
@@ -11,7 +11,29 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Психика</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Пакет psychic имеет множество подразделов, которые объеденены в один пакет только из-за огромных неудобств, создаваемых в языке golang отсутствием защиты от цикличности испорта типа Include Once (какой есть практически у всех нормальных языков).<br>
+Поэтому условно разделим этот пакет на:<br>
+<li><a href="package/actions_image.htm">actions_image</a> - совокупные образы действий.</li>
+<li><a href="package/actions_images_mental.htm">actions_images_mental</a> - совокупные образы ментальных действий.</li>
+<li><a href="package/automatism_tree.htm">automatism_tree</a> - дерево автоматизмов.</li>
+<li><a href="package/automatizm.htm">automatizm</a> - автоматизмы.</li>
+<li><a href="package/base_state_image.htm">base_state_image</a> - Образ текущего состояния.</li>
+<li><a href="package/cerebellum.htm">cerebellum</a> - рефлексы мохжечка.</li>
+<li><a href="package/dominanta.htm">dominanta</a> - доминанта нерешенной проблемы.</li>
+<li><a href="package/emotions.htm">emotions</a> - эмоциональные контексты.</li>
+<li><a href="package/episodic_memory.htm">episodic_memory</a> - эпизодическая память.</li>
+<li><a href="package/importance.htm">importance</a> - образы объектов значимости.</li>
+<li><a href="package/mental_automatizm.htm">mental_automatizm</a> - ментальные автоматизмы.</li>
+<li><a href="package/mood.htm">mood</a> - образ ощущаемого настроения.</li>
+<li><a href="package/orientation_reflexes.htm">orientation_reflexes</a> - ориентировочный рефлекс.</li>
+<li><a href="package/purpose_genetic.htm">purpose_genetic</a> - потребности.</li>
+<li><a href="package/rules.htm">rules</a> - правила - как эффект от совершенных действий.</li>
+<li><a href="package/rules_mental.htm">rules_mental</a> - правила - как эффект от мыслительных действий.</li>
+<li><a href="package/short_term_memory.htm">short_term_memory</a> - кратковременная память.</li>
+<li><a href="package/trigger_and_action.htm">trigger_and_action</a> - отдельные правила - как эффект от совершенных действий.</li>
+<li><a href="package/trigger_and_action_mental.htm">trigger_and_action_mental</a> - отдельные правила - как эффект от произвольных действий.</li>
+<li><a href="package/understanding.htm">understanding</a> - понимание, осмысление ситуации: 4 уровня вовлеченности.</li>
+<li><a href="package/understanding_purpose_image.htm">understanding_purpose_image</a> - образ желаемой целия.</li>
+<li><a href="package/understanding_situation_image.htm">understanding_situation_image</a> - образ текущей ситуации.</li>
+<li><a href="package/understanding_tree.htm">understanding_tree</a> - дерево понимания.</li>
+<li><a href="package/verbal_Broca_img.htm">verbal_Broca_img</a> - словестные образы (область Брока).</li>
