--- a/beast_scheme/package/rules.htm
+++ b/beast_scheme/package/rules.htm
@@ -11,7 +11,34 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Правила - как эффект от совершенных действий</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Обобщение примитивных правил на основе эпизодической памяти.<br>
+
+Заполняется при активации дерева (один эпизод)
+и при обобщении эпизодической памяти (последовательность эпизодов).<br>
+
+Бывает Правило со стимулом от Оператора и НЕ бывает со стимулом - по изменению состояния:
+//записать ПРАВИЛО, Стимул - ОТ ОПЕРАТОРА
+fixNewRules(lastCommonDiffValue,curActiveActionsID)<br>
+
+Цепочки Правил в Эпиз.памяти создабт карту решений в контексте одной темы:<br>
+карты местности - куда идти после очередного шага,<br>
+карту игры в шахматы: как ходить в данной позиции и на сколько шагов вперед обдумывать решения.<br>
+
+Поиск по Павилам ведется не по отдельным действиям (а это - не только слова, но и тон и/или кнопки действий),
+а тупо по ID образов действий. Но, если крепко заматься и вспоминать детально,
+то можно делать поиск по всем компонентам действий и делать его мягким.<br>
+<br>  
+<li><a href="../funcs/createNewRules.htm">createNewRules</a> - оздать новое сочетание ответных действий если такого еще нет</li>
+<li><a href="../funcs/SaveRulesArr.htm">SaveRulesArr</a> - сохранить Образы rules</li>
+<li><a href="../funcs/loadrulesArr.htm">loadrulesArr</a> - загрузить образы rules</li>
+<li><a href="../funcs/GetRulesFromEpisodeMemory.htm">GetRulesFromEpisodeMemory</a> - Создать групповое правило (более одного в цепочке EpisodeMemory.TAid) из последнего участка эпизодической памяти</li>
+<li><a href="../funcs/fixNewRules.htm">fixNewRules</a> - при каждом ответе на действия оператора - прописывать текущее ПРАВИЛО rules</li>
+<li><a href="../funcs/fixNewTeachRules.htm">fixNewTeachRules</a> - Отзеркаливает авторитерный ответ Оператора на совершенное действие</li>
+<li><a href="../funcs/getSuitableRules.htm">getSuitableRules</a> - выбрать наилучшее Правило rulesID для текущего действию Оператора с Пульта</li>
+<li><a href="../funcs/getRulesArrFromTrigger.htm">getRulesArrFromTrigger</a> - быстро выбрать ранее успешное правило из rulesArr для данных условий и заданного Стимула trigID типа ActionsImage</li>
+<li><a href="../funcs/getRulesFromEpisodicsSlice.htm">getRulesFromEpisodicsSlice</a> - Найти последнее известное Правило по цепочке последних limit кадров эпиз.памяти</li>
+<li><a href="../funcs/getRulesArrFromAttentionObject.htm">getRulesArrFromAttentionObject</a> - Выбрать ранее успешное правило из rulesArr для данных условий КОНКРЕТНО ДЛЯ определенного объекта внимания</li>
+<li><a href="../funcs/getDominantEffect.htm">getDominantEffect</a> - Найти доминирующий эффект для сочетания Стимул-Ответ</li>
+<li><a href="../funcs/isNextWellEffectFromActonRules.htm">isNextWellEffectFromActonRules</a> - есть ли положительный эффект у Правила, следующего за действием автоматизма</li>
+
+<br><br><br><br>
