--- a/beast_scheme/package/understanding_tree.htm
+++ b/beast_scheme/package/understanding_tree.htm
@@ -11,7 +11,43 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Дерево понимания</h1>
 </div>
 
-Beast  
-  
-<li><a href="../funcs/xxxxx.htm">xxxxx</a></li>
-<li><a href="xxxxx.htm">xxxxxx</a></li>
+Дерево понимания ситуации<br>
+Имеет фиксированных 4 уровней (кроме базового нулевого)
+формат записи: ID|ParentNode|Mood|EmotionID|SituationID|PurposeID<br>
+Узлы всех уровней могут произвольно меняться на другие для переактивации Дерева.<br>
+<br>
+Дерево может переактивароваться при срабатывании мент.автоматизмов с действиями
+MentalActionsImages.activateBaseID и MentalActionsImages.activateEmotion
+в mental_automatizm_actions.go RunMentalAutomatizm(
+SituationID определяет основной контекст ситуации, определяемый при вызове активации дерева понимания.<br><br>
+Если этот контекст не задан в understandingSituation(situationImageID
+то в getCurSituationImageID() по-началу выбирается наугад (для первого приближения) более важные из существующих,
+но потом дерево понимания может переактивироваться с произвольным заданием контекста.<br>
+От этого параметра зависит в каком направлении пойдет информационный поиск решений,
+если не будет запущен штатный автоматизм ветки (ориентировочные реакции).
+Более частный, целевой контекст ситуации определяется следующим параметром PurposeID.<br>
+<br>
+ID образа ЖЕЛАЕМОЙ при данных условиях цели - PurposeImage,
+который по-началу наследует PurposeGenetic, но может произвольно меняться,
+в том числе после подсказки оператором: 
+в результате осмысления ответа оператора и запуска мент.автоматизма корректироваки цели
+с перезапуском дерева понимания.<br>
+Для достижения этой общей цели в цепочках мент.автоматизмов определяются промежуточные цели так,
+что каждый мент.автоматизм оценивается успешным при появлении состояния, соотвествующему данной промежуточной цели,
+а конечное звено цепи должно стремиться к соотвествию PurposeID.<br> 
+<br> 
+Активация дерева ментальных автоматизмов происходит из:<br> 
+func afterTreeActivation() - при каждой активации automatism_tree.go<br> 
+и если было действия без ответа в течении 20 пульсов, то understandingSituation вызывается из
+func noAutovatizmResult()<br> 
+т.е. оба деревав работают совместно при EvolushnStage > 3 и по каждой активации UnderstandingTree
+добавляется эпизд памяти newEpisodeMemory()<br> 
+<br> 
+Аналогично дереву моторных автоматзмов, после активации могут быть ориентировочные рефлексы привлечения внимания.<br> 
+<br> 
+При вызове может быть определен situationImageID или проставлен 0 и тогда образ ситуации определяется в самой функции.
+
+<br>  
+<li><a href="../funcs/understandingSituation.htm">understandingSituation</a> - распознавание ситуации и желаемой цели</li>
+
+<br><br><br><br>
